--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<h1>Battle for Wesnoth</h1>
+		<h1>Taistelu Wesnothista</h1>
 		<nav>
 			<ul>
 				<li><a href="#what-is">Mikä on Taistelu Wesnothista</a></li>
@@ -38,7 +38,8 @@
 		</section>
 	</main>
 	<footer>
-		<p>© 2023 Battle for Wesnoth - Kaikki oikeudet pidätetään.</p>
+		<p>Copyright © 2003-2023 Taistelu Wesnothista-projekti - Kaikki oikeudet pidätetään.</p>
+		<p>Sivuston suunnittelu ja toteutus: Jaakko Saarikko<p>
 	</footer>
 </body>
 </html>
