--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fi">
 <head>
 	<meta charset="UTF-8">
-	<title>Battle for Wesnoth</title>
+	<title>Taistelu Wesnothista</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,19 +10,19 @@
 		<h1>Taistelu Wesnothista</h1>
 		<nav>
 			<ul>
-				<li><a href="#what-is">Mikä on Taistelu Wesnothista</a></li>
-				<li><a href="#features">Ominaisuudet</a></li>
-				<li><a href="#download">Lataa peli</a></li>
+				<li><a href="#tietoa">Mikä on Taistelu Wesnothista</a></li>
+				<li><a href="#ominaisuudet">Ominaisuudet</a></li>
+				<li><a href="#lataa">Lataa peli</a></li>
 			</ul>
 		</nav>
 	</header>
 	<main>
-		<section id="what-is">
+		<section id="tietoa">
 			<h2>Mikä on Taistelu Wesnothista?</h2>
 			<p>Taistelu Wesnothista on avoimen lähdekoodin strategiapeli, joka on saatavilla monille eri käyttöjärjestelmille, kuten Windows, Linux ja macOS.</p>
 			<p>Peli sijoittuu fantasiamaailmaan, jossa pelaaja johtaa armeijaa taisteluissa, kehittää yksiköitä ja suorittaa tehtäviä.</p>
 		</section>
-		<section id="features">
+		<section id="ominaisuudet">
 			<h2>Ominaisuudet</h2>
 			<ul>
 				<li>Moninpelitila, jossa voi pelata jopa 8 pelaajaa samanaikaisesti</li>
@@ -31,10 +31,16 @@
 				<li>Mahdollisuus luoda omia kampanjoita ja skenaarioita</li>
 			</ul>
 		</section>
-		<section id="download">
+		<section id="lataa">
 			<h2>Lataa peli</h2>
-			<p>Voit ladata Taistelu Wesnothista virallisilta verkkosivuilta:</p>
+
+			<p>Voit ladata Taistelu Wesnothista Steamin sisällönjako palvelusta ilmaiseksi:</p>
+			<a href="https://store.steampowered.com/app/599390/Battle_for_Wesnoth/">https://store.steampowered.com/app/599390/Battle_for_Wesnoth/</a>
+			<p>Tai voit ladata pelin virallisten verkkosivujen kautta:</p>
 			<a href="https://www.wesnoth.org/downloads/">https://www.wesnoth.org/downloads/</a>
+			<p>Linuxille on myös saatavilla Flatpak-paketti, jonka voit asentaa helposti Flathubista:</p>
+			<a href="https://flathub.org/fi/apps/org.wesnoth.Wesnoth">https://flathub.org/fi/apps/org.wesnoth.Wesnoth</a>
+			<button onclick="document.location='default.asp'">HTML Tutorial</button> 
 		</section>
 	</main>
 	<footer>
